soldout badge and fix to styling on mobile

--- a/js/components/product-card/product-card-styles.css
+++ b/js/components/product-card/product-card-styles.css
@@ -117,11 +117,9 @@
 }
 
 .pc-top-item {
-    padding-left: 10px;
-    padding-top: 5px;
-    margin-bottom: 5px;
-    margin-top: 0px;
+    margin: auto;
     flex-grow: 2;
+    padding-inline: 6px;
 }
 
 .pc-season-item {
@@ -138,7 +136,7 @@
     border-radius: 5px;
 }
 
-.pc-discount-item {
+.pc-discount-item, .pc-discount-item-modal {
     padding: 6px;
     /* margin-bottom: 5px; */
     align-self: flex-end;
@@ -146,6 +144,18 @@
     font-size: 12px !important;
     font-weight: 300 !important;
     background-color: #860000;
+    color: white;
+    border-radius: 5px;
+}
+
+.pc-soldout-item, .pc-soldout-item-modal {
+    padding: 6px;
+    /* margin-bottom: 5px; */
+    align-self: flex-end;
+    margin-top: 0px;
+    font-size: 12px !important;
+    font-weight: 300 !important;
+    background-color: #000000;
     color: white;
     border-radius: 5px;
 }
@@ -422,7 +432,7 @@ select option:hover {
         height: var(--product-modal-image-height-mobile);
     }
 
-    .product-button {
+    .product-button, .product-button-disabled {
         font-size: 10px;
         padding: 10px 15px;
     }
@@ -433,7 +443,35 @@ select option:hover {
 
     .pc-top-container-modal {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         height: auto;
     }
+
+    .pc-discount-item {
+        padding: 4px;
+        width: 20px;
+        text-align: center;
+        align-self: flex-end;
+        margin-top: 0px;
+        font-size: 8px !important;
+        font-weight: 250 !important;
+        background-color: #860000;
+        color: white;
+        border-radius: 5px;
+    }
+
+    .pc-soldout-item {
+        padding: 4px;
+        width: 20px;
+        text-align: center;
+        align-self: flex-end;
+        margin-top: 0px;
+        font-size: 8px !important;
+        font-weight: 250 !important;
+        background-color: #000000;
+        color: white;
+        border-radius: 5px;
+    }
+
 }
